Adding Maven Project

--- a/project-2/package.json
+++ b/project-2/package.json
@@ -21,8 +21,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "jest --watch",
+    "eject": "react-scripts eject",
+    "typecheck": "tsc",
+    "cover": "jest --coverage"
   },
   "eslintConfig": {
     "extends": [
