--- a/project-2/package.json
+++ b/project-2/package.json
@@ -10,9 +10,11 @@
     "@types/node": "^12.19.3",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
+    "@types/react-router-redux": "^5.0.18",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
     "typescript": "^4.0.5",
