--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,13 @@
     <artifactId>hibernate-validator</artifactId>
     <version>6.1.6.Final</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+<dependency>
+	<groupId>com.h2database</groupId>
+	<artifactId>h2</artifactId>
+	<version>1.4.200</version>
+	<scope>test</scope>
+</dependency>
 
 		
   </dependencies>
